<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wallet</string>
    <string name="create_transaction">Create Transaction</string>
    <string name="money">Amount</string>
    <string name="money_hint">0.00</string>
    <string name="category">What</string>
    <string name="category_hint">Category/Account</string>
    <string name="create">Create</string>
    <string name="receiver">Receiver</string>
    <string name="payer">Payer</string>
    <string name="person">Who</string>
    <string name="date">When</string>
    <string name="revenue">Revenue</string>
    <string name="expense">Expense</string>
    <string name="clear">Clear</string>
    <string name="loading">Loading ...</string>
    <string name="comment">Description</string>
    <string name="comment_hint">Transaction Description</string>
    
    <string-array name="categories">
        <item>Döner</item>
        <item>Mensa</item>
        <item>Pizza</item>
        <item>Lebensmittel</item>
        <item>Drinks</item>
        <item>Restaurant</item>
        <item>Büromaterial</item>
        <item>Girokonto</item>
    </string-array>
    <string-array name="receiver">
        <item>Lidl</item>
        <item>Dönerladen</item>
        <item>Mensa</item>
     </string-array>
    <string-array name="payer">
        <item>Konstantin Weitz</item>
     </string-array>
</resources>
